removed node-modules dir

--- a/Node_TP_1/package.json
+++ b/Node_TP_1/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "test": "jest",
     "start": "node main.js",
-    "nodemon": "nodemon main.js"
+    "nodemon": "nodemon main.js",
+    "eslint": "npx eslint *.js",
+    "prod": "cp main.js prod/. && cd prod && node main.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +18,12 @@
     "progress": "^2.0.3"
   },
   "devDependencies": {
+    "eslint": "^8.33.0",
+    "eslint-config-semistandard": "^17.0.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.4.2",
     "nodemon": "^2.0.20"
   },
